SERVER-40886 Added log when operations ignore errors